# HackRx_Bajaj_Hackathon

./: .dockerignore  .env.example  .gitignore  .vercelignore  CLAUDE.md  DEPLOYMENT_ALTERNATIVES.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.alpine  Dockerfile.vercel  QUICKSTART.md  README.md  deploy.sh  main.py  project.md  pyproject.toml  pytest.ini  railway.json  render.yaml  requirements.txt  test_api.py  vercel.json
api/: index.py
app/: __init__.py  config.py  main.py  middleware.py
app/api/: __init__.py  deps.py
app/api/endpoints/: documents.py  hackrx.py  health.py  qa.py
app/models/: requests.py  responses.py
app/services/: __init__.py  document_service.py  rag_service.py  url_document_service.py
app/utils/: __init__.py  exceptions.py  logger.py
docs/: README.md
docs/diagrams/: phase-1-foundation-workflow.md  phase-2-core-rag-workflow.md  phase-3-api-endpoints-workflow.md  phase-4-testing-framework-workflow.md
docs/phases/: phase-1-foundation.md  phase-2-core-rag.md  phase-3-api-endpoints.md  phase-4-testing-framework.md
tests/: __init__.py  conftest.py  test_api_documents.py  test_api_health.py  test_api_qa.py  test_config.py  test_document_service.py  test_rag_service.py
tests/integration/: test_end_to_end.py  test_performance.py
tests/utils/: helpers.py
