[project]
name = "rag-qa-foundation"
version = "0.1.0"
description = "Production-ready RAG Q&A system with FastAPI and Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.8.2",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.5.0",
    "langchain-google-genai>=1.0.0",
    "langchain>=0.3.15",
    "langchain-community>=0.3.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.3",
    "PyPDF2>=3.0.1",
    "python-docx>=1.1.0",
    "chardet>=5.2.0",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.2",
    "watchfiles>=0.21.0",
    "pytest>=8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.7.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
    "real_gemini_api: marks tests that require real Gemini API access"
]
